lab1/Test/L1-A-3-97.output
Error Type B at Line 3
Error Type A at Line 19
Error Type A at Line 23
Error Type B at Line 24
Error Type A at Line 24
Error Type B at Line 30
Error Type B at Line 32
Error Type B at Line 32
