lab1/Test/L1-A-3-97.cmm
struct {
  float aYtXaO951Nof1XdRK [ 728473910 ] , e7nOtqrL71Xngp48yzE 
    [ 721974170 ] [ 1689825905 ] , Lr [ 341601151 ] ! 
    [ 850701202 ] ;
  struct IfXlXU0DwdO fQU0OcOWo [ 1410986717 ] = NnvS7PTOpn6R 
    ( ) <= ( qj ) - ma2Qv >= - Nn5ymNSDqxKPWwbRK * SqGQ5uRz1vcyk 
    >= qPOJ_EKP3rg8bUvrNSj ( u3w2ZUO7GEjVSZd ) - hCU - 
    _mqnRt_WOl9n > WSeOMSMPentGrbP7A ( ) + bzLOCeTkQBjqzhdExFe 
    - wqMsVjrw0g4 - eEgTOTaK88_h + d9MSZKZ4lW != - Q8Vzu0GQmOs6sasjtODa 
    * dTv3vyuSKrHxrgm1 / Dvgjyvi - G_L45q == ! Po9 * rgLq 
    / o - RT7CnED - jH0jUICmXnHCMdYcM - l > - qtDrWxPAHyDJJgfz1XEJ 
    * McnOJ1XThSrReYKMy1 / oC6AP / Cyb * GA2FMHPjmq6KLzJ3IK 
    / RBLbg7Y0IhV0 / HPO_AvDb * mEpPkm * VgAaSzXXNw4 && 
    ! eWOnjlS9acyaEsW * tthzhT8L9Zh / WFyIH11wB9E6W * 
    dVIZOJGr0GsVd * n_JijIYZ / wHnFDcje / Mu9QS4xquBW3dSOs 
    * c8XqxAOFlL51RM9xs / UE42y7RLAg - Z - fA4jGDnQBQyjY7BQf 
    + jObTdZNkz6f - sQiLek8DUVjKu2 <= I6hKt6E == ezAMXR1KUL9QFX 
    == LdVSXx_4cGjyqK == XDJjEFbLztqYcWA66 < nAWGN4nyOcqpWVMjiSR 
    > vMTFzAzfHhRionzd84i < F != jLhJt_WGf7zLGFZo :&& 
    ! AGJgpVQ3JLmj41MYU6 * fRF52v6A_4Ez7STp * ApWoKQZ7 
    / hn2bKFaeMdqwuKJ8 / Wy * NupPgTyMF3x6N > UiqYazyN9F 
    > tFXCWaV , Utzcd9pd1kLPLjHeTPq , p2kSaxUvW ;
@};
( float VvHbRiXV , fdrTZW8ukpe [ 611880288 ] [ :264829743 
  ] , E 


;
struct pi ;
float fsF [ 1349005657 ] ! 
;
) == 